@@ -1,3 +1,9 @@
+2005-01-11  Thomas Klausner  <wiz@danbala.tuwien.ac.at>
+
+	* lib/zip_name_locate.c (_zip_name_locate): fix ZIP_FL_NODIR;
+	also follow appnote.txt and only accept forward slashes as
+	directory separators.
+
 2005-01-11  Dieter Baron  <dillo@danbala.tuwien.ac.at>
 
 	* lib/zip_new.c (_zip_new): init error.
